--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -39,10 +39,7 @@
               <td><%= dataUser[i].email %></td>
               <td><%= dataUser[i].address %></td>
               <td>
-                <a
-                  target="_blank"
-                  href="/detail/user/<%= dataUser[i].id%>"
-                >
+                <a target="_blank" href="/detail/user/<%= dataUser[i].id%>">
                   Detail
                 </a>
                 <button type="button">Edit</button>
@@ -52,6 +49,31 @@
             <% } %>
           </tbody>
         </table>
+
+        <div class="create-user-container">
+          <div>Create a new user:</div>
+          <form action="/create-new-user" method="POST">
+            <div>
+              <label>FirstName: </label>
+              <input type="text" name="firstName" />
+            </div>
+            <div>
+              <label>LastName: </label>
+              <input type="text" name="lastName" />
+            </div>
+            <div>
+              <label>Email: </label>
+              <input type="text" name="email" />
+            </div>
+            <div>
+              <label>Address: </label>
+              <input type="text" name="address" />
+            </div>
+            <div>
+              <button type="submit" class="btn-submit">Submit</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </body>
