--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -37,3 +37,9 @@ body {
   margin-top: 15px;
   cursor: pointer;
 }
+.update-user-container {
+  text-align: center;
+}
+.update-user-container label{
+  display: block;
+}
