--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -42,8 +42,18 @@
                 <a target="_blank" href="/detail/user/<%= dataUser[i].id%>">
                   Detail
                 </a>
-                <button type="button">Edit</button>
-                <button type="button">Delete</button>
+                <form action="/edit-user/<%= dataUser[i].id%>" method="GET">
+                  <button type="submit">Edit</button>
+                </form>
+                <form action="/delete-user" method="POST">
+                  <input
+                    type="text"
+                    value="<%= dataUser[i].id%>"
+                    name="userId"
+                    hidden
+                  />
+                  <button type="submit">Delete</button>
+                </form>
               </td>
             </tr>
             <% } %>
